--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_de_DE.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_de_DE.json
@@ -84,7 +84,7 @@
   "sidebar_hosting": "Hosting-Pakete",
   "sidebar_cloud_web": "Cloud Web",
   "sidebar_plesk": "Plesk",
-  "sidebar_web_db": "Datenbank",
+  "sidebar_web_db": "Web Cloud Databases",
   "sidebar_web_paas": "Web PaaS",
   "sidebar_platform_sh": "Web PaaS powered by Platform.sh",
   "sidebar_emails": "E-Mails",
