--- a/packages/manager/apps/container/src/public/translations/server-sidebar-order/Messages_it_IT.json
+++ b/packages/manager/apps/container/src/public/translations/server-sidebar-order/Messages_it_IT.json
@@ -34,7 +34,7 @@
   "server_sidebar_item_cloud_desktop_title": "Cloud Desktop",
   "server_sidebar_item_domains_title": "Domini",
   "server_sidebar_item_hostings_title": "Hosting",
-  "server_sidebar_item_privateDatabases_title": "Database",
+  "server_sidebar_item_privateDatabases_title": "Web Cloud Databases",
   "server_sidebar_item_emailPros_title": "Email Pro",
   "server_sidebar_item_emails_title": "Email",
   "server_sidebar_item_office_title": "Office",
@@ -79,7 +79,7 @@
   "server_sidebar_order_item_sharepoint_title": "SharePoint",
   "server_sidebar_order_item_zone_title": "Zona DNS",
   "server_sidebar_order_item_enterprise_cloud_database_title": "Enterprise Cloud Databases",
-  "server_sidebar_order_item_cloudDatabase_title": "CloudDB",
+  "server_sidebar_order_item_cloudDatabase_title": "Web Cloud Databases",
   "server_sidebar_order_item_ovh_cloud_connect_title": "OVHcloud Connect",
   "server_sidebar_order_item_web_paas_title": "Web PaaS",
   "server_sidebar_item_nutanix_title": "Nutanix",
