--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_en_GB.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_en_GB.json
@@ -84,7 +84,7 @@
   "sidebar_hosting": "Hosting plans",
   "sidebar_cloud_web": "Cloud Web",
   "sidebar_plesk": "Plesk",
-  "sidebar_web_db": "Database ",
+  "sidebar_web_db": "Web Cloud Databases",
   "sidebar_web_paas": "Web PaaS",
   "sidebar_platform_sh": "Web PaaS powered by Platform.sh",
   "sidebar_emails": "Emails",
