--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_es_ES.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_es_ES.json
@@ -84,7 +84,7 @@
   "sidebar_hosting": "Alojamientos",
   "sidebar_cloud_web": "Cloud Web 1",
   "sidebar_plesk": "Plesk",
-  "sidebar_web_db": "Base de datos",
+  "sidebar_web_db": "Web Cloud Databases",
   "sidebar_web_paas": "Web PaaS",
   "sidebar_platform_sh": "Web PaaS powered by Platform.sh",
   "sidebar_emails": "Direcciones de correo",
