--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_fr_CA.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_fr_CA.json
@@ -103,7 +103,7 @@
   "sidebar_hosting": "Hébergements",
   "sidebar_cloud_web": "Cloud Web",
   "sidebar_plesk": "Plesk",
-  "sidebar_web_db": "Base de données",
+  "sidebar_web_db": "Web Cloud Databases",
   "sidebar_web_paas": "Web PaaS",
   "sidebar_platform_sh": "Web PaaS powered by Platform.sh",
   "sidebar_emails": "E-mails",
