--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_pt_PT.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_pt_PT.json
@@ -85,7 +85,7 @@
   "sidebar_hosting": "Alojamentos",
   "sidebar_cloud_web": "Cloud Web 1",
   "sidebar_plesk": "Plesk",
-  "sidebar_web_db": "Base de dados",
+  "sidebar_web_db": "Web Cloud Databases",
   "sidebar_web_paas": "Web PaaS",
   "sidebar_platform_sh": "Web PaaS powered by Platform.sh",
   "sidebar_emails": "E-mails",
