--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/detach-volume/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/detach-volume/translations/Messages_fr_FR.json
@@ -1,6 +1,6 @@
 {
-  "pci_projects_project_storages_volume_backup_create_detach_volume_title": "Détacher votre volume {{ volumeName }} à son instance {{ instanceName }}",
-  "pci_projects_project_storages_volume_backup_create_detach_volume_description": "Souhaitez-vous détacher votre volume de son instance ?",
+  "pci_projects_project_storages_volume_backup_create_detach_volume_title": "Détacher votre volume",
+  "pci_projects_project_storages_volume_backup_create_detach_volume_description": "Souhaitez-vous détacher votre volume {{ volumeName }} de son instance {{ instanceName }} ?",
   "pci_projects_project_storages_volume_backup_create_detach_volume_action_cancel": "Annuler",
   "pci_projects_project_storages_volume_backup_create_detach_volume_action_detach": "Confirmer",
   "pci_projects_project_storages_volume_backup_create_detach_volume_action_success": "Votre volume {{ volumeName }} a été détaché de son instance {{ instanceName }}.",
