--- a/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/volume-backup/create/translations/Messages_fr_FR.json
@@ -22,6 +22,8 @@
   "pci_projects_project_storages_volume_backup_create_step_4_input_label": "Nom de la sauvegarde",
   "pci_projects_project_storages_volume_backup_create_action_create": "Créer la sauvegarde",
   "pci_projects_project_storages_volume_backup_create_action_create_option_volume_snapshot_success": "Votre sauvegarde {{ backupName }} a bien été créée.",
-  "pci_projects_project_storages_volume_backup_create_action_create_option_volume_backup_success": "Votre sauvegarde {{ backupName }} a bien été créée. Pensez à rattacher votre volume à son instance.",
+  "pci_projects_project_storages_volume_backup_create_action_create_option_volume_backup_success_part_1": "La sauvegarde {{ backupName }} est en cours de création.",
+  "pci_projects_project_storages_volume_backup_create_action_create_option_volume_backup_success_part_2": "Une fois la sauvegarde créée, pensez à rattacher le volume {{ volumeName }} à son instance.",
+  "pci_projects_project_storages_volume_backup_create_action_create_option_volume_backup_success_link": "Pensez à rattacher votre volume à son instance.",
   "pci_projects_project_storages_volume_backup_create_action_create_volume_backup_fail": "Une erreur est survenue lors de la création de votre sauvegarde : {{ errorMessage }}"
 }
