fix(i18n): add missing translations [CDS 2110]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/apps/dedicated/client/app/ip/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/ip/translations/Messages_en_GB.json
@@ -164,7 +164,7 @@
   "ip_failover_short": "FO",
   "ip_failover_impossible_delete": "This IP cannot be deleted ",
   "ip_failover_impossible_move": "This IP cannot be moved ",
-  "ip_failover_cloud_move_info": "You will soon be able to move the Additional IPs to other OVHcloud products.",
+  "ip_failover_cloud_move_info": "You will soon be able to move cloud Additional IPs to other OVHcloud products.",
   "ip_position": "Priority",
   "ip_position_tooltip": "Rules are read sequentially. Rule 0 has the highest priority.",
   "ip_rule": "Rule",
@@ -575,10 +575,10 @@
   "iplb_ssl_import_question2": "Note: You may restore the OVHcloud certificate later on, if you wish.",
   "iplb_ssl_import_success": "Your SSL certificate will be imported in a few minutes.",
   "iplb_ssl_import_failure": "An error occurred when trying to import your SSL certificate.",
-  "iplb_ssl_restore_title": "Restore the OVHcloud SSL certificate",
+  "iplb_ssl_restore_title": "Restoring the OVHcloud SSL certificate",
   "iplb_ssl_restore_question": "Are you sure you want to restore the OVHcloud SSL certificate?",
   "iplb_ssl_restore_question2": "A DCV email will be sent to \"postmaster@your_domain.com\".",
-  "iplb_ssl_restore_success": "Your OVHcloud SSL certificate will be restored as soon as it has been validated.",
+  "iplb_ssl_restore_success": "Your OVHcloud SSL certificate will be restored once it has been validated.",
   "iplb_ssl_restore_failure": "An error has occurred restoring your OVHcloud SSL certificate.",
   "iplb_zone_internalnatip": "NAT internal IP",
   "iplb_zone_probeip": "IP test protocol",
@@ -725,7 +725,7 @@
   "ip_game_mitigation_ACTIVATED_help": "The Anti-DDoS Game protection option is available for this service.",
   "ip_firewall_NOT_CONFIGURED_help": "Traffic does not pass through the Edge Network Firewall, and it has never been configured.",
   "ip_firewall_DEACTIVATED_help": "Traffic does not pass through the Edge Network Firewall.",
-  "ip_firewall_ACTIVATED_help": "Traffic coming from outside the OVHcloud network passes through the Edge Network Firewall. Note: The Edge Network Firewall is enabled automatically whenever a DDoS attack is launched, and cannot be disabled before the attack ends.",
+  "ip_firewall_ACTIVATED_help": "Traffic coming from outside the OVHcloud network passes through the Edge Network Firewall. Note: The Edge Network Firewall activates automatically whenever a DDoS attack is launched, and cannot be disabled before the attack ends.",
   "ip_firewall_PENDING_help": "Firewall being enabled or disabled.",
   "ip_firewall_DISABLE_PENDING_help": "Firewall being disabled.",
   "ip_firewall_ENABLE_PENDING_help": "Firewall being enabled.",
