--- a/packages/manager/modules/pci/src/projects/project/storages/databases/database/current-queries/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/storages/databases/database/current-queries/translations/Messages_pl_PL.json
@@ -13,5 +13,8 @@
   "pci_databases_current_queries_datagrid_column_database": "Baza danych",
   "pci_databases_current_queries_datagrid_column_client_address": "Adres klienta",
   "pci_databases_current_queries_datagrid_column_application_name": "Nazwa aplikacji",
-  "pci_databases_current_queries_fetch_error": "Wystąpił błąd podczas pobierania zapytań w trakcie. Spróbuj później."
+  "pci_databases_current_queries_fetch_error": "Wystąpił błąd podczas pobierania zapytań w trakcie. Spróbuj później.",
+  "pci_databases_current_queries_datagrid_terminate_action_label": "Zakończ",
+  "pci_databases_current_queries_datagrid_terminate_action_success": "Zapytanie oznaczone {{pid}} kończy się i zniknie z listy przy następnym odświeżeniu.",
+  "pci_databases_current_queries_datagrid_terminate_action_error": "Nie można zakończyć zapytania oznaczonego zapytania {{pid}}."
 }
