--- a/packages/manager/apps/container/src/public/translations/sidebar/Messages_fr_FR.json
+++ b/packages/manager/apps/container/src/public/translations/sidebar/Messages_fr_FR.json
@@ -26,6 +26,7 @@
   "sidebar_licences": "Licences",
   "sidebar_hpc": "Hosted Private Cloud",
   "sidebar_vmware": "VMware",
+  "sidebar_vmware_all": "Tous mes services",
   "sidebar_anthos_all": "Tous mes déploiements",
   "sidebar_nutanix": "Nutanix",
   "sidebar_cluster_all": "Tous mes clusters",
