--- a/packages/components/ng-ovh-otrs/src/otrs-popup/translations/Messages_de_DE.json
+++ b/packages/components/ng-ovh-otrs/src/otrs-popup/translations/Messages_de_DE.json
@@ -55,7 +55,6 @@
   "otrs_service_type_email_mxplan": "MX Plan E-Mail",
   "otrs_service_type_email_pro": "E-Mail Pro",
   "otrs_service_type_hosting_web": "Webhosting",
-  "otrs_service_type_hubic": "hubiC",
   "otrs_service_type_OTHER": "Sonstige",
   "otrs_service_type_dedicated_cloud": "Hosted Private Cloud",
   "otrs_service_type_cloud": "Public Cloud",
@@ -120,8 +119,12 @@
   "otrs_service_type_hpcspot": "HPC Spot",
   "otrs_service_type_saas_csp_2": "SAAS CSP2",
   "otrs_service_type_horizon_view": "Horizon View",
+  "otrs_service_type_webcoach": "Website Coach",
   "otrs_service_type_other": "Andere Anfrage",
   "otrs_service_type_choice": "Diensttyp:",
+  "otrs_service_type_dedicated_anthos": "Anthos",
+  "otrs_service_type_license_redhat": "Red Hat-Lizenz",
+  "otrs_service_type_nutanix": "Nutanix",
   "otrs_universe_choice": "Bereich:",
   "otrs_universe_WEB": "Web",
   "otrs_universe_SUNRISE": "Sunrise",
@@ -197,9 +200,5 @@
   "otrs_intervention_disk_comment_english_please": "Englisch bevorzugt ",
   "otrs_intervention_disk_confirm": "Ich habe ein Backup der Daten erstellt, die auf der auszutauschenden Festplatte sind. Bitte tauschen Sie nun diese Festplatte aus.",
   "otrs_support_agreements": "Die im vorliegenden Formular angegebenen Daten werden mit Ihrer Genehmigung erhoben und an die OVH GmbH in ihrer Funktion als Verantwortlicher der Verarbeitung versendet. Sie können an Subunternehmen, die nach strikten Anweisungen der OVH GmbH handeln, sowie an andere Einheiten der OVH Unternehmensgruppe übermittelt werden. Eine Übermittlung innerhalb der OVH Gruppe außerhalb der Europäischen Union findet nur nach Maßgabe verbindlicher interner Datenschutzvorschriften statt. Diese Daten werden zur Kundenbetreuung, Erstellung von Angeboten und Werbung sowie zur Einhaltung geltender Vorschriften für OVH erhoben. Die Daten Ihres Kundenkontos werden bis zur Löschung des Kontos und anschließend weitere sechsunddreißig (36) Monate aufbewahrt. Bestimmte zu Verwaltungszwecken verarbeitete Daten (zum Beispiel Rechnungen) können gemäß der jeweils geltenden Vorschriften auch für längere Zeit gespeichert werden. Hinsichtlich der Verarbeitung Ihrer persönlichen Daten durch OVHcloud können Sie Widerspruch einlegen sowie Zugriff auf die Daten und die Berichtigung, Löschung, Einschränkung der Verarbeitung und Übertragbarkeit der Daten verlangen, sofern ein berechtigter Grund vorliegt. Sie haben ebenfalls das Recht, eine Beschwerde bei der zuständigen Datenschutzbehörde geltend zu machen. Bitte nutzen Sie zur Ausübung dieser Rechte unser dafür vorgesehenes Formular.",
-  "otrs_support_agreements_US": "OVHcloud verwendet die Informationen Ihres Accounts dazu, Sie zu identifizieren und es dem Mitarbeiter vom Support zu ermöglichen, technische Probleme zu lösen. Außerdem verbessert OVHcloud anhand dieser Daten die angebotenen Dienste. Sie nutzen diese Website im Einklang mit den <a href=\"{{ terms }}\" target=\"_blank\">Nutzungsbedingungen</a> und den <a href=\"{{ privacyPolicy}}\" target=\"_blank\">Datenschutzbestimmungen</a> von OVHcloud, sofern Sie keinen gesonderten Vertrag mit OVHcloud über den Kauf von OVHcloud Diensten abgeschlossen haben.",
-  "otrs_service_type_webcoach": "Website Coach",
-  "otrs_service_type_dedicated_anthos": "Anthos",
-  "otrs_service_type_license_redhat": "Red Hat-Lizenz",
-  "otrs_service_type_nutanix": "Nutanix"
+  "otrs_support_agreements_US": "OVHcloud verwendet die Informationen Ihres Accounts dazu, Sie zu identifizieren und es dem Mitarbeiter vom Support zu ermöglichen, technische Probleme zu lösen. Außerdem verbessert OVHcloud anhand dieser Daten die angebotenen Dienste. Sie nutzen diese Website im Einklang mit den <a href=\"{{ terms }}\" target=\"_blank\">Nutzungsbedingungen</a> und den <a href=\"{{ privacyPolicy}}\" target=\"_blank\">Datenschutzbestimmungen</a> von OVHcloud, sofern Sie keinen gesonderten Vertrag mit OVHcloud über den Kauf von OVHcloud Diensten abgeschlossen haben."
 }
