--- a/packages/components/ng-ovh-otrs/src/otrs-popup/translations/Messages_es_ES.json
+++ b/packages/components/ng-ovh-otrs/src/otrs-popup/translations/Messages_es_ES.json
@@ -55,7 +55,6 @@
   "otrs_service_type_email_mxplan": "Email MX Plan",
   "otrs_service_type_email_pro": "Email Pro",
   "otrs_service_type_hosting_web": "Alojamiento web",
-  "otrs_service_type_hubic": "hubiC",
   "otrs_service_type_OTHER": "Otro",
   "otrs_service_type_dedicated_cloud": "Hosted Private Cloud",
   "otrs_service_type_cloud": "Public Cloud",
@@ -120,8 +119,12 @@
   "otrs_service_type_hpcspot": "HPC Spot",
   "otrs_service_type_saas_csp_2": "SAAS CSP2",
   "otrs_service_type_horizon_view": "Horizon View",
+  "otrs_service_type_webcoach": "Website Coach",
   "otrs_service_type_other": "Otra solicitud",
   "otrs_service_type_choice": "Tipo de servicio:",
+  "otrs_service_type_dedicated_anthos": "Anthos",
+  "otrs_service_type_license_redhat": "Licencia Red Hat",
+  "otrs_service_type_nutanix": "Nutanix",
   "otrs_universe_choice": "Universo:",
   "otrs_universe_WEB": "Web",
   "otrs_universe_SUNRISE": "Sunrise",
@@ -197,9 +200,5 @@
   "otrs_intervention_disk_comment_english_please": "Preferiblemente en inglés",
   "otrs_intervention_disk_confirm": "He realizado una copia de seguridad de los datos del disco que quiero sustituir. Puede proceder a sustituirlo.",
   "otrs_support_agreements": "Los datos comunicados a través de este formulario se recogen con su consentimiento y están destinados a OVH SAS en su calidad de responsable del tratamiento. Podrán ser transmitidos a los encargados del tratamiento que actúen siguiendo instrucciones estrictas de OVH SAS, así como a las entidades del grupo OVHcloud. En este segundo caso, siempre y cuando la entidad del grupo OVHcloud haya firmado unas normas corporativas vinculantes, los datos podrán transferirse fuera de la Unión Europea. Los datos de este formulario se recopilan con fines de gestión de la atención al cliente, de tratamiento de solicitudes comerciales y de cumplimento de la legislación aplicable a OVHcloud. Los datos de su cuenta de cliente se conservan hasta la eliminación de dicha cuenta de cliente y durante los treinta y seis (36) meses posteriores. Ciertos datos tratados con fines de gestión (por ejemplo, facturas) pueden conservarse durante más tiempo de acuerdo con la reglamentación aplicable. Tiene la posibilidad de presentar una reclamación ante la autoridad de control competente, así como de ejercer sus derechos de acceso, rectificación, supresión, limitación, portabilidad y oposición por motivos legítimos a los datos personales relativos a usted. Para ejercer estos derechos, envíe su solicitud desde nuestro formulario específico para tal fin.",
-  "otrs_support_agreements_US": "OVHcloud utiliza los datos de su cuenta para identificarle y permitir que el servicio de atención al cliente resuelva problemas técnicos y mejore los servicios de OVHcloud. El uso de este sitio web se rige por las <a href=\"{{ terms }}\" target=\"_blank\">Condiciones de uso</a> y la <a href=\"{{ privacyPolicy}}\" target=\"_blank\">Política de confidencialidad</a> de OVHcloud, salvo que haya firmado un contrato diferente con OVHcloud para la adquisición de sus servicios.",
-  "otrs_service_type_webcoach": "Website Coach",
-  "otrs_service_type_dedicated_anthos": "Anthos",
-  "otrs_service_type_license_redhat": "Licencia Red Hat",
-  "otrs_service_type_nutanix": "Nutanix"
+  "otrs_support_agreements_US": "OVHcloud utiliza los datos de su cuenta para identificarle y permitir que el servicio de atención al cliente resuelva problemas técnicos y mejore los servicios de OVHcloud. El uso de este sitio web se rige por las <a href=\"{{ terms }}\" target=\"_blank\">Condiciones de uso</a> y la <a href=\"{{ privacyPolicy}}\" target=\"_blank\">Política de confidencialidad</a> de OVHcloud, salvo que haya firmado un contrato diferente con OVHcloud para la adquisición de sus servicios."
 }
