--- a/packages/components/ng-ovh-otrs/src/otrs-popup/translations/Messages_it_IT.json
+++ b/packages/components/ng-ovh-otrs/src/otrs-popup/translations/Messages_it_IT.json
@@ -55,7 +55,6 @@
   "otrs_service_type_email_mxplan": "Email MX Plan",
   "otrs_service_type_email_pro": "Email Pro",
   "otrs_service_type_hosting_web": "Hosting Web",
-  "otrs_service_type_hubic": "hubiC",
   "otrs_service_type_OTHER": "Altro",
   "otrs_service_type_dedicated_cloud": "Hosted Private Cloud",
   "otrs_service_type_cloud": "Public Cloud",
@@ -120,8 +119,12 @@
   "otrs_service_type_hpcspot": "HPC Spot",
   "otrs_service_type_saas_csp_2": "SAAS CSP2",
   "otrs_service_type_horizon_view": "Horizon View",
+  "otrs_service_type_webcoach": "Website Coach",
   "otrs_service_type_other": "Altra richiesta",
   "otrs_service_type_choice": "Tipo di servizio:",
+  "otrs_service_type_dedicated_anthos": "Anthos",
+  "otrs_service_type_license_redhat": "Licenza Red Hat",
+  "otrs_service_type_nutanix": "Nutanix",
   "otrs_universe_choice": "Universo:",
   "otrs_universe_WEB": "Web",
   "otrs_universe_SUNRISE": "Sunrise",
@@ -197,9 +200,5 @@
   "otrs_intervention_disk_comment_english_please": "Preferibilmente in inglese",
   "otrs_intervention_disk_confirm": "Ho eseguito il backup dei dati contenuti sul disco che vorrei sostituire. È possibile procedere con la sostituzione.",
   "otrs_support_agreements": "I dati comunicati tramite questo modulo sono raccolti con il tuo consenso e destinati a OVH Srl in qualità di responsabile del trattamento dei dati personali. Possono essere trasmessi agli incaricati del trattamento dei dati personali, sulla base di rigide indicazioni da parte di OVH Srl, così come alle entità del Gruppo. Nel secondo caso, a condizione che la suddetta entità abbia firmato norme aziendali vincolanti, i dati possono anche essere trasferiti al di fuori dell'Unione Europea. I dati inseriti in questo modulo sono raccolti per la gestione dei rapporti con i clienti e solleciti commerciali, nel rispetto delle norme applicabili a OVH. I dati del tuo account cliente vengono conservati fino all'eliminazione dell'account e per i 36 mesi successivi. Fatture e altri dati fiscali sono conservati per un periodo più lungo, in base alla legislazione vigente. Ti informiamo che hai la facoltà di presentare un reclamo all’autorità di controllo competente, nonché di esercitare il diritto di accesso, rettifica, cancellazione, limitazione, portabilità e opposizione relativamente ai tuoi dati personali, per motivi legittimi. Per esercitare questi diritti, inoltra la tua richiesta utilizzando il form dedicato.",
-  "otrs_support_agreements_US": "OVHcloud utilizza le informazioni del tuo account per identificarti, permettere al servizio clienti di risolvere i problemi tecnici e migliorare i servizi di OVHcloud. L’utilizzo di questo sito è disciplinato dalle <a href=\"{{ terms }}\" target=\"_blank\">Condizioni di utilizzo</a> e dalla <a href=\"{{ privacyPolicy}}\" target=\"_blank\">Politica di confidenzialità</a> di OVHcloud, salvo stipula di un contratto separato con OVHcloud per l'acquisto dei suoi servizi.",
-  "otrs_service_type_webcoach": "Website Coach",
-  "otrs_service_type_dedicated_anthos": "Anthos",
-  "otrs_service_type_license_redhat": "Licenza Red Hat",
-  "otrs_service_type_nutanix": "Nutanix"
+  "otrs_support_agreements_US": "OVHcloud utilizza le informazioni del tuo account per identificarti, permettere al servizio clienti di risolvere i problemi tecnici e migliorare i servizi di OVHcloud. L’utilizzo di questo sito è disciplinato dalle <a href=\"{{ terms }}\" target=\"_blank\">Condizioni di utilizzo</a> e dalla <a href=\"{{ privacyPolicy}}\" target=\"_blank\">Politica di confidenzialità</a> di OVHcloud, salvo stipula di un contratto separato con OVHcloud per l'acquisto dei suoi servizi."
 }
