--- a/packages/manager/apps/dedicated/client/app/account/contacts/service/translations/Messages_de_DE.json
+++ b/packages/manager/apps/dedicated/client/app/account/contacts/service/translations/Messages_de_DE.json
@@ -2,14 +2,15 @@
   "account_contacts_service_name": "Name des Dienstes",
   "account_contacts_service_category": "Dienst",
   "account_contacts_service_category_CLOUD": "Public Cloud",
+  "account_contacts_service_category_ANTHOS": "Anthos",
   "account_contacts_service_category_DEDICATED": "Dedicated Server",
   "account_contacts_service_category_EXCHANGE": "Exchange",
   "account_contacts_service_category_HOSTING": "Shared",
   "account_contacts_service_category_HOSTING_RESELLER": "Shared (Reseller)",
-  "account_contacts_service_category_HUBIC": "hubiC",
   "account_contacts_service_category_KUBE": "Kubernetes",
   "account_contacts_service_category_OTHER": "Andere",
   "account_contacts_service_category_PRIVATE_CLOUD": "VMware",
+  "account_contacts_service_category_ESSENTIALS": "Managed Bare Metal",
   "account_contacts_service_category_PUBLIC_CLOUD": "Public Cloud",
   "account_contacts_service_category_SITE_BUILDER": "Site Builder",
   "account_contacts_service_category_TELEPHONY": "Telefonie",
@@ -29,17 +30,15 @@
   "account_contacts_service_category_LOAD_BALANCING": "Loadbalancing-IP",
   "account_contacts_service_category_LOAD_BALANCER": "IP-Loadbalancer",
   "account_contacts_service_category_OVER_THE_BOX": "OverTheBox",
+  "account_contacts_service_category_OVH_CLOUD_CONNECT": "OVHcloud Connect",
   "account_contacts_service_category_FAILOVER": "Failover-IP",
   "account_contacts_service_category_PACK_XDSL": "xDSL-Pakete",
+  "account_contacts_service_category_NUTANIX": "Nutanix",
   "account_contacts_service_category_PACK_SIP_TRUNK": "SIP-Trunk-Paket",
   "account_contacts_service_contact_admin": "Administrator-Kontakt",
   "account_contacts_service_contact_tech": "Technischer Kontakt",
   "account_contacts_service_contact_billing": "Rechnungskontakt",
   "account_contacts_service_infos": "Sie können die Administator-, technischen und Rechnungs-Accounts Ihrer Dienste ändern.",
-  "account_contacts_service_category_OVH_CLOUD_CONNECT": "OVHcloud Connect",
-  "account_contacts_service_category_ESSENTIALS": "Managed Bare Metal",
   "account_contacts_service_category_LOGS": "Logs Data Platform ",
-  "account_contacts_service_category_ANTHOS": "Anthos",
-  "account_contacts_service_category_NETAPP": "NetApp",
-  "account_contacts_service_category_NUTANIX": "Nutanix"
+  "account_contacts_service_category_NETAPP": "NetApp"
 }
