--- a/packages/manager/apps/dedicated/client/app/account/contacts/service/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/account/contacts/service/translations/Messages_en_GB.json
@@ -2,14 +2,15 @@
   "account_contacts_service_name": "Service name",
   "account_contacts_service_category": "Service",
   "account_contacts_service_category_CLOUD": "Public Cloud",
+  "account_contacts_service_category_ANTHOS": "Anthos",
   "account_contacts_service_category_DEDICATED": "Dedicated Server",
   "account_contacts_service_category_EXCHANGE": "Exchange",
   "account_contacts_service_category_HOSTING": "Hosting",
   "account_contacts_service_category_HOSTING_RESELLER": "Hosting (reseller)",
-  "account_contacts_service_category_HUBIC": "hubiC",
   "account_contacts_service_category_KUBE": "Kubernetes",
   "account_contacts_service_category_OTHER": "Other",
   "account_contacts_service_category_PRIVATE_CLOUD": "VMware",
+  "account_contacts_service_category_ESSENTIALS": "Managed Bare Metal",
   "account_contacts_service_category_PUBLIC_CLOUD": "PCI",
   "account_contacts_service_category_SITE_BUILDER": "Site builder",
   "account_contacts_service_category_TELEPHONY": "Telephony",
@@ -29,17 +30,15 @@
   "account_contacts_service_category_LOAD_BALANCING": "Load balancing IP",
   "account_contacts_service_category_LOAD_BALANCER": "IP Load Balancer",
   "account_contacts_service_category_OVER_THE_BOX": "OverTheBox",
+  "account_contacts_service_category_OVH_CLOUD_CONNECT": "OVHcloud Connect",
   "account_contacts_service_category_FAILOVER": "Failover IP",
   "account_contacts_service_category_PACK_XDSL": "XDSL packs ",
+  "account_contacts_service_category_NUTANIX": "Nutanix",
   "account_contacts_service_category_PACK_SIP_TRUNK": "SIP Trunk packs",
   "account_contacts_service_contact_admin": "Admin contact",
   "account_contacts_service_contact_tech": "Technical contact ",
   "account_contacts_service_contact_billing": "Billing contact",
   "account_contacts_service_infos": "You can change the administrator, technical and billing accounts for your services.",
-  "account_contacts_service_category_OVH_CLOUD_CONNECT": "OVHcloud Connect",
-  "account_contacts_service_category_ESSENTIALS": "Managed Bare Metal",
   "account_contacts_service_category_LOGS": "Logs Data Platform",
-  "account_contacts_service_category_ANTHOS": "Anthos",
-  "account_contacts_service_category_NETAPP": "NetApp",
-  "account_contacts_service_category_NUTANIX": "Nutanix"
+  "account_contacts_service_category_NETAPP": "NetApp"
 }
