--- a/packages/manager/apps/dedicated/client/app/account/contacts/service/translations/Messages_es_ES.json
+++ b/packages/manager/apps/dedicated/client/app/account/contacts/service/translations/Messages_es_ES.json
@@ -2,14 +2,15 @@
   "account_contacts_service_name": "Nombre del servicio",
   "account_contacts_service_category": "Servicio",
   "account_contacts_service_category_CLOUD": "Public Cloud",
+  "account_contacts_service_category_ANTHOS": "Anthos",
   "account_contacts_service_category_DEDICATED": "Servidor dedicado",
   "account_contacts_service_category_EXCHANGE": "Exchange",
   "account_contacts_service_category_HOSTING": "Alojamiento compartido",
   "account_contacts_service_category_HOSTING_RESELLER": "Alojamiento compartido (revendedor)",
-  "account_contacts_service_category_HUBIC": "hubiC",
   "account_contacts_service_category_KUBE": "Kubernetes",
   "account_contacts_service_category_OTHER": "Otro",
   "account_contacts_service_category_PRIVATE_CLOUD": "VMware",
+  "account_contacts_service_category_ESSENTIALS": "Essentials",
   "account_contacts_service_category_PUBLIC_CLOUD": "PCI",
   "account_contacts_service_category_SITE_BUILDER": "Site builder",
   "account_contacts_service_category_TELEPHONY": "Telefonía",
@@ -29,17 +30,15 @@
   "account_contacts_service_category_LOAD_BALANCING": "IP Load Balancing",
   "account_contacts_service_category_LOAD_BALANCER": "IP Load Balancer",
   "account_contacts_service_category_OVER_THE_BOX": "OverTheBox",
+  "account_contacts_service_category_OVH_CLOUD_CONNECT": "OVHcloud Connect",
   "account_contacts_service_category_FAILOVER": "IP Failover",
   "account_contacts_service_category_PACK_XDSL": "Packs XDSL",
+  "account_contacts_service_category_NUTANIX": "Nutanix",
   "account_contacts_service_category_PACK_SIP_TRUNK": "Packs SIP Trunk",
   "account_contacts_service_contact_admin": "Contacto administrador",
   "account_contacts_service_contact_tech": "Contacto técnico ",
   "account_contacts_service_contact_billing": "Contacto de facturación",
   "account_contacts_service_infos": "Puede cambiar las cuentas del contacto administrador, técnico y de facturación de sus servicios.",
-  "account_contacts_service_category_OVH_CLOUD_CONNECT": "OVHcloud Connect",
-  "account_contacts_service_category_ESSENTIALS": "Essentials",
   "account_contacts_service_category_LOGS": "Logs Data Platform",
-  "account_contacts_service_category_ANTHOS": "Anthos",
-  "account_contacts_service_category_NETAPP": "NetApp",
-  "account_contacts_service_category_NUTANIX": "Nutanix"
+  "account_contacts_service_category_NETAPP": "NetApp"
 }
