--- a/packages/manager/apps/dedicated/client/app/account/contacts/service/translations/Messages_pt_PT.json
+++ b/packages/manager/apps/dedicated/client/app/account/contacts/service/translations/Messages_pt_PT.json
@@ -2,14 +2,15 @@
   "account_contacts_service_name": "Nome do serviço",
   "account_contacts_service_category": "Serviço",
   "account_contacts_service_category_CLOUD": "Public Cloud",
+  "account_contacts_service_category_ANTHOS": "Anthos",
   "account_contacts_service_category_DEDICATED": "Servidor dedicado",
   "account_contacts_service_category_EXCHANGE": "Exchange",
   "account_contacts_service_category_HOSTING": "Alojamento partilhado",
   "account_contacts_service_category_HOSTING_RESELLER": "Alojamento partilhado (revendedor)",
-  "account_contacts_service_category_HUBIC": "Hubic",
   "account_contacts_service_category_KUBE": "Kubernetes",
   "account_contacts_service_category_OTHER": "Outro",
   "account_contacts_service_category_PRIVATE_CLOUD": "VMware",
+  "account_contacts_service_category_ESSENTIALS": "Managed Bare Metal",
   "account_contacts_service_category_PUBLIC_CLOUD": "PCI",
   "account_contacts_service_category_SITE_BUILDER": "Site Builder",
   "account_contacts_service_category_TELEPHONY": "Serviço Telefónico",
@@ -29,17 +30,15 @@
   "account_contacts_service_category_LOAD_BALANCING": "IP Load Balancer",
   "account_contacts_service_category_LOAD_BALANCER": "IP Load Balancer",
   "account_contacts_service_category_OVER_THE_BOX": "OverTheBox",
+  "account_contacts_service_category_OVH_CLOUD_CONNECT": "OVHcloud Connect",
   "account_contacts_service_category_FAILOVER": "IP Failover",
   "account_contacts_service_category_PACK_XDSL": "Packs XDSL",
+  "account_contacts_service_category_NUTANIX": "Nutanix",
   "account_contacts_service_category_PACK_SIP_TRUNK": "Packs SIP Trunk",
   "account_contacts_service_contact_admin": "Contacto administrador",
   "account_contacts_service_contact_tech": "Contacto técnico",
   "account_contacts_service_contact_billing": "Contacto de faturação",
   "account_contacts_service_infos": "Pode alterar as contas do administrador, do responsável técnico e do responsável pela faturação dos seus serviços.",
-  "account_contacts_service_category_OVH_CLOUD_CONNECT": "OVHcloud Connect",
-  "account_contacts_service_category_ESSENTIALS": "Managed Bare Metal",
   "account_contacts_service_category_LOGS": "Logs Data Platform",
-  "account_contacts_service_category_ANTHOS": "Anthos",
-  "account_contacts_service_category_NETAPP": "NetApp",
-  "account_contacts_service_category_NUTANIX": "Nutanix"
+  "account_contacts_service_category_NETAPP": "NetApp"
 }
