--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_de_DE.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_de_DE.json
@@ -728,6 +728,8 @@
   "hosting_tab_FTP_FTP_port": "FTP-Port:",
   "hosting_tab_FTP_SFTP_port": "SFTP-Port:",
   "hosting_tab_FTP_SSH_port": "SSH-Port:",
+  "hosting_tab_FTP_FTP_user": "FTP:",
+  "hosting_tab_FTP_SSH_user": "SFTP und SSH:",
   "hosting_tab_FTP_dashboard_login": "Haupt-Login:",
   "hosting_tab_FTP_dashboard_login_enabled": "Haupt-Login aktiviert:",
   "hosting_tab_FTP_dashboard_homez": "Pfad des home-Verzeichnisses:",
@@ -1072,7 +1074,6 @@
   "hosting_tab_DATABASES_configuration_order_title_button_public": "Eine Datenbank bestellen",
   "hosting_tab_DATABASES_configuration_order_title_button_private": "Eine Datenbank mit der Lösung „Web Cloud Databases“ bestellen",
   "hosting_tab_DATABASES_configuration_order_title": "Datenbank bestellen",
-  "hosting_tab_DATABASES_configuration_order_title_private": "Eine SQL Private-Datenbank bestellen",
   "hosting_ipv4_coming_soon": "Derzeit nicht verfügbar",
   "hosting_tab_BOOST": "Mein Angebot boosten",
   "hosting_tab_BOOST_not_supported": "Für das {{t0}} Angebot ist kein Boost möglich.",
@@ -1353,7 +1354,5 @@
   "hosting_dashboard_service_common_inactive": "Inaktiv",
   "hosting_dashboard_email_offer_get_error": "Es ist unmöglich, die E-Mail-Adresse wiederherzustellen.",
   "hosting_dashboard_stats_status": "Beta",
-  "hosting_dashboard_tabs_dropdown": "Mehr",
-  "hosting_tab_FTP_FTP_user": "FTP:",
-  "hosting_tab_FTP_SSH_user": "SFTP und SSH:"
+  "hosting_dashboard_tabs_dropdown": "Mehr"
 }
