--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_en_GB.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_en_GB.json
@@ -728,6 +728,8 @@
   "hosting_tab_FTP_FTP_port": "FTP port:",
   "hosting_tab_FTP_SFTP_port": "SFTP port:",
   "hosting_tab_FTP_SSH_port": "SSH port:",
+  "hosting_tab_FTP_FTP_user": "FTP:",
+  "hosting_tab_FTP_SSH_user": "SFTP and SSH:",
   "hosting_tab_FTP_dashboard_login": "Main login:",
   "hosting_tab_FTP_dashboard_login_enabled": "Main login activated:",
   "hosting_tab_FTP_dashboard_homez": "Home directory path:",
@@ -1072,7 +1074,6 @@
   "hosting_tab_DATABASES_configuration_order_title_button_public": "Order a database",
   "hosting_tab_DATABASES_configuration_order_title_button_private": "Order a Web Cloud Database",
   "hosting_tab_DATABASES_configuration_order_title": "Order a database",
-  "hosting_tab_DATABASES_configuration_order_title_private": "Order a Private SQL database",
   "hosting_ipv4_coming_soon": "Currently unavailable",
   "hosting_tab_BOOST": "Boost my hosting plan",
   "hosting_tab_BOOST_not_supported": "The {{t0}} plan cannot be boosted.",
@@ -1353,7 +1354,5 @@
   "hosting_dashboard_service_common_inactive": "Disabled",
   "hosting_dashboard_email_offer_get_error": "Unable to retrieve email address",
   "hosting_dashboard_stats_status": "Beta",
-  "hosting_dashboard_tabs_dropdown": "More",
-  "hosting_tab_FTP_FTP_user": "FTP:",
-  "hosting_tab_FTP_SSH_user": "SFTP and SSH:"
+  "hosting_dashboard_tabs_dropdown": "More"
 }
