--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_es_ES.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_es_ES.json
@@ -728,6 +728,8 @@
   "hosting_tab_FTP_FTP_port": "Puerto FTP:",
   "hosting_tab_FTP_SFTP_port": "Puerto SFTP:",
   "hosting_tab_FTP_SSH_port": "Puerto SSH:",
+  "hosting_tab_FTP_FTP_user": "FTP:",
+  "hosting_tab_FTP_SSH_user": "SFTP y SSH:",
   "hosting_tab_FTP_dashboard_login": "Usuario principal:",
   "hosting_tab_FTP_dashboard_login_enabled": "Usuario principal activado:",
   "hosting_tab_FTP_dashboard_homez": "Acceso al directorio de la página principal:",
@@ -1072,7 +1074,6 @@
   "hosting_tab_DATABASES_configuration_order_title_button_public": "Contratar una base de datos",
   "hosting_tab_DATABASES_configuration_order_title_button_private": "Contratar una base de datos Web Cloud Databases",
   "hosting_tab_DATABASES_configuration_order_title": "Contratar una base de datos",
-  "hosting_tab_DATABASES_configuration_order_title_private": "Solicite una base de datos SQL privada",
   "hosting_ipv4_coming_soon": "No disponible actualmente.",
   "hosting_tab_BOOST": "Mejorar mi plan",
   "hosting_tab_BOOST_not_supported": "El plan {{t0}} no puede mejorarse.",
@@ -1353,7 +1354,5 @@
   "hosting_dashboard_service_common_inactive": "Inactivo",
   "hosting_dashboard_email_offer_get_error": "No se ha podido cargar la dirección de correo.",
   "hosting_dashboard_stats_status": "Beta",
-  "hosting_dashboard_tabs_dropdown": "Más",
-  "hosting_tab_FTP_FTP_user": "FTP:",
-  "hosting_tab_FTP_SSH_user": "SFTP y SSH:"
+  "hosting_dashboard_tabs_dropdown": "Más"
 }
