--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_it_IT.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_it_IT.json
@@ -728,6 +728,8 @@
   "hosting_tab_FTP_FTP_port": "Porta FTP:",
   "hosting_tab_FTP_SFTP_port": "Porta SFTP:",
   "hosting_tab_FTP_SSH_port": "Porta SSH:",
+  "hosting_tab_FTP_FTP_user": "FTP:",
+  "hosting_tab_FTP_SSH_user": "SFTP e SSH:",
   "hosting_tab_FTP_dashboard_login": "Login principale:",
   "hosting_tab_FTP_dashboard_login_enabled": "Login principale attivato:",
   "hosting_tab_FTP_dashboard_homez": "Percorso cartella Home:",
@@ -1072,7 +1074,6 @@
   "hosting_tab_DATABASES_configuration_order_title_button_public": "Ordinare un database",
   "hosting_tab_DATABASES_configuration_order_title_button_private": "Ordinare un database Web Cloud Databases",
   "hosting_tab_DATABASES_configuration_order_title": "Ordina un database",
-  "hosting_tab_DATABASES_configuration_order_title_private": "Ordina un database SQL Privato",
   "hosting_ipv4_coming_soon": "Al momento non disponibile",
   "hosting_tab_BOOST": "Boost ",
   "hosting_tab_BOOST_not_supported": "Per la soluzione {{t0}} non è possibile eseguire upgrade.",
@@ -1353,7 +1354,5 @@
   "hosting_dashboard_service_common_inactive": "Disattivo",
   "hosting_dashboard_email_offer_get_error": "Impossibile recuperare l’indirizzo email",
   "hosting_dashboard_stats_status": "Beta",
-  "hosting_dashboard_tabs_dropdown": "Più",
-  "hosting_tab_FTP_FTP_user": "FTP:",
-  "hosting_tab_FTP_SSH_user": "SFTP e SSH:"
+  "hosting_dashboard_tabs_dropdown": "Più"
 }
