--- a/packages/manager/modules/support/src/tickets/new-ticket/translations/Messages_en_GB.json
+++ b/packages/manager/modules/support/src/tickets/new-ticket/translations/Messages_en_GB.json
@@ -24,7 +24,6 @@
   "ovhManagerSupport_new_serviceType_email_exchange": "Exchange",
   "ovhManagerSupport_new_serviceType_email_mxplan": "MX Plan Email",
   "ovhManagerSupport_new_serviceType_email_pro": "Email Pro",
-  "ovhManagerSupport_new_serviceType_hubic": "hubiC",
   "ovhManagerSupport_new_serviceType_OTHER": "Other",
   "ovhManagerSupport_new_serviceType_dedicated_cloud": "VMware",
   "ovhManagerSupport_new_serviceType_managed_bare_metal": "Managed Bare Metal",
@@ -71,6 +70,7 @@
   "ovhManagerSupport_new_serviceType_license_windows": "Windows licence ",
   "ovhManagerSupport_new_serviceType_license_worklight": "Worklight licence",
   "ovhManagerSupport_new_serviceType_managed_mongodb": "Public Cloud Databases for MongoDB",
+  "ovhManagerSupport_new_serviceType_managed_mongodb_enterprise": "Public Cloud Databases for MongoDB Entreprise",
   "ovhManagerSupport_new_serviceType_nutanix": "Nutanix",
   "ovhManagerSupport_new_serviceType_ovh_cloud_connect": "OVHcloud Connect",
   "ovhManagerSupport_new_serviceType_pack_xdsl": "xDSL pack",
@@ -99,6 +99,8 @@
   "ovhManagerSupport_new_serviceType_horizon_view": "Horizon View",
   "ovhManagerSupport_new_serviceType_other": "Other request",
   "ovhManagerSupport_new_serviceType_ai_training_job": "AI Training",
+  "ovhManagerSupport_new_serviceType_ai_notebook": "AI Notebooks",
+  "ovhManagerSupport_new_serviceType_ai_app": "AI Deploy",
   "ovhManagerSupport_new_serviceType_webpaas": "Web PaaS",
   "ovhManagerSupport_new_serviceType_dedicated_anthos": "Anthos",
   "ovhManagerSupport_new_serviceType_managed_mysql": "Public Cloud Databases for MySQL",
@@ -107,6 +109,17 @@
   "ovhManagerSupport_new_serviceType_managed_kafka": "Public Cloud Databases for Kafka",
   "ovhManagerSupport_new_serviceType_managed_opensearch": "Public Cloud Databases for OpenSearch",
   "ovhManagerSupport_new_serviceType_managed_kafka_mirror_maker": "Public Cloud Databases for Kafka MirrorMaker",
+  "ovhManagerSupport_new_serviceType_managed_grafana": "Public Cloud Databases for Grafana",
+  "ovhManagerSupport_new_serviceType_managed_m3": "Public Cloud Databases for M3",
+  "ovhManagerSupport_new_serviceType_managed_m3_aggregator": "Public Cloud Databases for M3 Aggregator",
+  "ovhManagerSupport_new_serviceType_managed_kafka_connect": "Public Cloud Databases for Kafka Connect",
+  "ovhManagerSupport_new_serviceType_managed_cassandra": "Public Cloud Databases for Cassandra",
+  "ovhManagerSupport_new_serviceType_license_office_prepaid": "Microsoft 365 licence",
+  "ovhManagerSupport_new_serviceType_publiccloud_storage": "Object Storage S3 Standard",
+  "ovhManagerSupport_new_serviceType_publiccloud_storage_highperf": "Object Storage S3 High Perf",
+  "ovhManagerSupport_new_serviceType_publiccloud_storage_swift": "Object Storage Swift Standard",
+  "ovhManagerSupport_new_serviceType_publiccloud_storage_swift_archive": "Object Storage Swift Archive",
+  "ovhManagerSupport_new_serviceType_publiccloud_storage_archive": "S3 Object Storage Archive",
   "ovhManagerSupport_new_service": "Service concerned",
   "ovhManagerSupport_new_service_unknown": "This service is not listed and/or I do not have this service yet",
   "ovhManagerSupport_new_issue": "Question",
@@ -139,20 +152,6 @@
   "ovhManagerSupport_new_business_1": "Want to get your project reviewed?",
   "ovhManagerSupport_new_business_2": "Please detail your requirements by sending an email to the following email address:",
   "ovhManagerSupport_new_business_3": "Support tickets sent to this email address will not be processed.",
-  "ovhManagerSupport_new_serviceType_managed_grafana": "Public Cloud Databases for Grafana",
-  "ovhManagerSupport_new_serviceType_managed_m3": "Public Cloud Databases for M3",
-  "ovhManagerSupport_new_serviceType_managed_m3_aggregator": "Public Cloud Databases for M3 Aggregator",
-  "ovhManagerSupport_new_serviceType_managed_kafka_connect": "Public Cloud Databases for Kafka Connect",
-  "ovhManagerSupport_new_serviceType_managed_cassandra": "Public Cloud Databases for Cassandra",
-  "ovhManagerSupport_new_serviceType_ai_notebook": "AI Notebooks",
-  "ovhManagerSupport_new_serviceType_license_office_prepaid": "Microsoft 365 licence",
-  "ovhManagerSupport_new_serviceType_publiccloud_storage": "Object Storage S3 Standard",
-  "ovhManagerSupport_new_serviceType_publiccloud_storage_highperf": "Object Storage S3 High Perf",
-  "ovhManagerSupport_new_serviceType_publiccloud_storage_swift": "Object Storage Swift Standard",
-  "ovhManagerSupport_new_serviceType_publiccloud_storage_swift_archive": "Object Storage Swift Archive",
   "ovhManagerSupport_new_serviceType_publiccloud_gateway": "Gateway",
-  "ovhManagerSupport_new_serviceType_publiccloud_floating_ip": "Floating IPs",
-  "ovhManagerSupport_new_serviceType_ai_app": "AI Deploy",
-  "ovhManagerSupport_new_serviceType_managed_mongodb_enterprise": "Public Cloud Databases for MongoDB Entreprise",
-  "ovhManagerSupport_new_serviceType_publiccloud_storage_archive": "S3 Object Storage Archive"
+  "ovhManagerSupport_new_serviceType_publiccloud_floating_ip": "Floating IPs"
 }
