--- a/packages/manager/modules/support/src/tickets/new-ticket/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/support/src/tickets/new-ticket/translations/Messages_pt_PT.json
@@ -24,7 +24,6 @@
   "ovhManagerSupport_new_serviceType_email_exchange": "Exchange",
   "ovhManagerSupport_new_serviceType_email_mxplan": "E-mail MX Plan",
   "ovhManagerSupport_new_serviceType_email_pro": "E-mail Pro",
-  "ovhManagerSupport_new_serviceType_hubic": "Hubic",
   "ovhManagerSupport_new_serviceType_OTHER": "Outro",
   "ovhManagerSupport_new_serviceType_dedicated_cloud": "VMware",
   "ovhManagerSupport_new_serviceType_managed_bare_metal": "Managed Bare Metal",
@@ -71,6 +70,7 @@
   "ovhManagerSupport_new_serviceType_license_windows": "Licença Windows",
   "ovhManagerSupport_new_serviceType_license_worklight": "Licença Worklight",
   "ovhManagerSupport_new_serviceType_managed_mongodb": "Public Cloud databases for MongoDB",
+  "ovhManagerSupport_new_serviceType_managed_mongodb_enterprise": "Public Cloud Databases for MongoDB Entreprise",
   "ovhManagerSupport_new_serviceType_nutanix": "Nutanix",
   "ovhManagerSupport_new_serviceType_ovh_cloud_connect": "OVHcloud Connect",
   "ovhManagerSupport_new_serviceType_pack_xdsl": "Pack xDSL",
@@ -99,6 +99,8 @@
   "ovhManagerSupport_new_serviceType_horizon_view": "Horizon View",
   "ovhManagerSupport_new_serviceType_other": "Outro pedido",
   "ovhManagerSupport_new_serviceType_ai_training_job": "AI Training",
+  "ovhManagerSupport_new_serviceType_ai_notebook": "AI Notebooks",
+  "ovhManagerSupport_new_serviceType_ai_app": "AI Deploy",
   "ovhManagerSupport_new_serviceType_webpaas": "Web PaaS",
   "ovhManagerSupport_new_serviceType_dedicated_anthos": "Anthos",
   "ovhManagerSupport_new_serviceType_managed_mysql": "Public Cloud Databases for MySQL",
@@ -107,6 +109,17 @@
   "ovhManagerSupport_new_serviceType_managed_kafka": "Public Cloud Databases for Kafka",
   "ovhManagerSupport_new_serviceType_managed_opensearch": "Public Cloud Databases for OpenSearch",
   "ovhManagerSupport_new_serviceType_managed_kafka_mirror_maker": "Public Cloud Databases for Kafka MirrorMaker",
+  "ovhManagerSupport_new_serviceType_managed_grafana": "Public Cloud databases for Grafana",
+  "ovhManagerSupport_new_serviceType_managed_m3": "Public Cloud databases for M3",
+  "ovhManagerSupport_new_serviceType_managed_m3_aggregator": "Public Cloud databases for M3 Aggregator",
+  "ovhManagerSupport_new_serviceType_managed_kafka_connect": "Public Cloud databases for Kafka Connect",
+  "ovhManagerSupport_new_serviceType_managed_cassandra": "Public Cloud databases for Cassandra",
+  "ovhManagerSupport_new_serviceType_license_office_prepaid": "Licença Microsoft 365",
+  "ovhManagerSupport_new_serviceType_publiccloud_storage": "Object Storage S3 Standard",
+  "ovhManagerSupport_new_serviceType_publiccloud_storage_highperf": "Object Storage S3 High Perf",
+  "ovhManagerSupport_new_serviceType_publiccloud_storage_swift": "Object Storage Swift Standard",
+  "ovhManagerSupport_new_serviceType_publiccloud_storage_swift_archive": "Object Storage Swift Archive",
+  "ovhManagerSupport_new_serviceType_publiccloud_storage_archive": "Object Storage S3 Archive",
   "ovhManagerSupport_new_service": "Serviço afetado",
   "ovhManagerSupport_new_service_unknown": "O meu serviço não aparece na lista ou ainda não disponho deste serviço.",
   "ovhManagerSupport_new_issue": "Pergunta",
@@ -139,20 +152,6 @@
   "ovhManagerSupport_new_business_1": "Quer iniciar um projeto?",
   "ovhManagerSupport_new_business_2": "Explique-nos aquilo de que precisa através do seguinte endereço:",
   "ovhManagerSupport_new_business_3": "Os pedidos de assistência recebidos neste endereço não serão tratados.",
-  "ovhManagerSupport_new_serviceType_managed_grafana": "Public Cloud databases for Grafana",
-  "ovhManagerSupport_new_serviceType_managed_m3": "Public Cloud databases for M3",
-  "ovhManagerSupport_new_serviceType_managed_m3_aggregator": "Public Cloud databases for M3 Aggregator",
-  "ovhManagerSupport_new_serviceType_managed_kafka_connect": "Public Cloud databases for Kafka Connect",
-  "ovhManagerSupport_new_serviceType_managed_cassandra": "Public Cloud databases for Cassandra",
-  "ovhManagerSupport_new_serviceType_ai_notebook": "AI Notebooks",
-  "ovhManagerSupport_new_serviceType_license_office_prepaid": "Licença Microsoft 365",
-  "ovhManagerSupport_new_serviceType_publiccloud_storage": "Object Storage S3 Standard",
-  "ovhManagerSupport_new_serviceType_publiccloud_storage_highperf": "Object Storage S3 High Perf",
-  "ovhManagerSupport_new_serviceType_publiccloud_storage_swift": "Object Storage Swift Standard",
-  "ovhManagerSupport_new_serviceType_publiccloud_storage_swift_archive": "Object Storage Swift Archive",
   "ovhManagerSupport_new_serviceType_publiccloud_gateway": "Gateway",
-  "ovhManagerSupport_new_serviceType_publiccloud_floating_ip": "IP flutuante",
-  "ovhManagerSupport_new_serviceType_ai_app": "AI Deploy",
-  "ovhManagerSupport_new_serviceType_managed_mongodb_enterprise": "Public Cloud Databases for MongoDB Entreprise",
-  "ovhManagerSupport_new_serviceType_publiccloud_storage_archive": "Object Storage S3 Archive"
+  "ovhManagerSupport_new_serviceType_publiccloud_floating_ip": "IP flutuante"
 }
