--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_de_DE.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_de_DE.json
@@ -164,5 +164,7 @@
   "telecom_pack_migration_modem_no": "Kein Modem",
   "telecom_pack_migration_modem_required": "Die Wahl eines Modemtyps ist zwingend erforderlich",
   "telecom_pack_migration_confirm_modem_rental_yes": "Miete für das neue Modem",
-  "telecom_pack_migration_confirm_modem_rental_recycled": "Modem-Vermietung"
+  "telecom_pack_migration_confirm_modem_rental_recycled": "Modem-Vermietung",
+  "telecom_pack_migration_offers_debit_mention_1": "(1) Bis zu 92 Mbit/s VDSL und 22 Mbit/s ADSL, je nach Förderfähigkeit.",
+  "telecom_pack_migration_offers_debit_mention_2": "(2) Bis zu 36 Mbit/s VDSL und 1 Mbit/s ADSL, je nach Förderfähigkeit."
 }
