--- a/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_en_GB.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/migration/translations/Messages_en_GB.json
@@ -183,5 +183,7 @@
   "telecom_pack_migration_modem_no": "No modem",
   "telecom_pack_migration_modem_required": "You must select a modem type",
   "telecom_pack_migration_confirm_modem_rental_yes": "New modem rental",
-  "telecom_pack_migration_confirm_modem_rental_recycled": "Location modem recycled"
+  "telecom_pack_migration_confirm_modem_rental_recycled": "Location modem recycled",
+  "telecom_pack_migration_offers_debit_mention_1": "(1) Up to 92 Mb/s descending in VDSL and 22 Mb/s in ADSL, depending on eligibility.",
+  "telecom_pack_migration_offers_debit_mention_2": "(2) Up to 36 Mb/s VDSL and 1 Mb/s ADSL, depending on eligibility."
 }
