--- a/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_de_DE.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_de_DE.json
@@ -124,5 +124,7 @@
   "pack_move_modem_no": "Kein Modem",
   "pack_move_modem_required": "Die Wahl eines Modemtyps ist zwingend erforderlich",
   "pack_move_confirm_modem_rental_yes": "Miete für das neue Modem",
-  "pack_move_confirm_modem_rental_recycled": "Modem-Vermietung"
+  "pack_move_confirm_modem_rental_recycled": "Modem-Vermietung",
+  "pack_move_offers_debit_mention_1": "(1) Bis zu 92 Mbit/s VDSL und 22 Mbit/s ADSL, je nach Förderfähigkeit.",
+  "pack_move_offers_debit_mention_2": "(2) Bis zu 36 Mbit/s VDSL und 1 Mbit/s ADSL, je nach Förderfähigkeit."
 }
