--- a/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_fr_CA.json
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/move/translations/Messages_fr_CA.json
@@ -280,5 +280,7 @@
   "pack_move_modem_no": "Pas de modem",
   "pack_move_modem_required": "La sélection d'un type de modem est obligatoire",
   "pack_move_confirm_modem_rental_yes": "Location modem neuf",
-  "pack_move_confirm_modem_rental_recycled": "Location modem recyclé"
+  "pack_move_confirm_modem_rental_recycled": "Location modem recyclé",
+  "pack_move_offers_debit_mention_1": "(1) Jusqu'à 92 Mb/s descendant en VDSL et 22 Mb/s en ADSL, selon éligibilité.",
+  "pack_move_offers_debit_mention_2": "(2) Jusqu'à 36 Mb/s montant en VDSL et 1 Mb/s en ADSL, selon éligibilité."
 }
