feat: add image requirements
datatr-191

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-image/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-image/translations/Messages_fr_FR.json
@@ -2,7 +2,11 @@
   "pci_app_submit_select_image_preset_info": "Description",
   "pci_app_submit_select_image_advanced_tips": "Déployer votre propre application",
   "pci_app_submit_select_image_advanced": "Déployer votre propre application (image Docker)",
-  "pci_app_submit_select_image_tips": "Renseigner le chemin d'accès de votre image Docker. Cela peut être un registre public (GitHub, Gitlab, DockerHub, ...) ou privé",
+  "pci_app_submit_select_image_tips": "Renseigner le chemin d'accès de votre image Docker. Cela peut être un registre public (GitHub, Gitlab, DockerHub, ...) ou privé.",
+  "pci_app_submit_select_image_info_message_1": "Veillez à configurer votre registre si celui-ci est privé.",
+  "pci_app_submit_select_image_info_message_2": "Veuillez noter que l'image doit être construite avec une architecture AMD {{architectures}}. L'utilisation de docker-compose n'est pas possible.",
+  "pci_app_submit_select_image_info_message_3": "Veillez à donner les bons droits d'accès à l'utilisateur OVHcloud (user=42420:42420) afin que votre image se lance correctement:",
+  "pci_app_submit_select_image_info_custom_doc": "Pour plus d'information, n'hésitez pas à consulter notre documentation",
   "pci_app_submit_select_image_name": "Chemin d'accès de votre image Docker",
   "pci_app_submit_select_image_tips_help": "Les images hébergées sur une registre privé ou public sont acceptées (GitHub, GitLab, DockerHub, ...)",
   "pci_app_submit_select_image_portfolio": "Découvrez notre porfolio d'applications AI prêtes à l'emploi",
