fix(i18n): add missing translations [CDS 2120]
Signed-off-by: CDS Translator Agent <opensource@ovh.net>

--- a/packages/manager/modules/vps/src/dashboard/tile/configuration/translations/Messages_en_GB.json
+++ b/packages/manager/modules/vps/src/dashboard/tile/configuration/translations/Messages_en_GB.json
@@ -15,5 +15,8 @@
   "vps_dashboard_tile_configuration_upgrade_complete_reboot_required": "The resources have been added to your VPS. Please reboot it to apply the new configuration.",
   "vps_dashboard_tile_configuration_vcore": "vCores",
   "vps_dashboard_tile_configuration_memory_add_upscale_elite": "Add power to your VPS by increasing your memory",
-  "vps_dashboard_tile_configuration_storage_add_upscale_elite": "Add power to your VPS by increasing your storage"
+  "vps_dashboard_tile_configuration_storage_add_upscale_elite": "Add power to your VPS by increasing your storage",
+  "vps_dashboard_tile_configuration_upgrade_wrong_nic_cpu": "For more vCores, please contact the NIC admin: {{nichandle}}",
+  "vps_dashboard_tile_configuration_upgrade_wrong_nic_memory": "For more memory, please contact the NIC admin: {{nichandle}}",
+  "vps_dashboard_tile_configuration_upgrade_wrong_nic_storage": "For more storage, please contact the NIC admin: {{nichandle}}"
 }
