--- a/packages/manager/modules/vps/src/dashboard/tile/configuration/translations/Messages_de_DE.json
+++ b/packages/manager/modules/vps/src/dashboard/tile/configuration/translations/Messages_de_DE.json
@@ -15,5 +15,8 @@
   "vps_dashboard_tile_configuration_upgrade_complete_reboot_required": "Ihrem VPS wurden neue Ressourcen hinzugefügt. Bitte starten Sie Ihren Server neu, um die neue Konfiguration zu aktivieren.",
   "vps_dashboard_tile_configuration_vcore": "vCores",
   "vps_dashboard_tile_configuration_memory_add_upscale_elite": "Bauen Sie Ihren VPS aus und fügen Sie Arbeitsspeicher hinzu.",
-  "vps_dashboard_tile_configuration_storage_add_upscale_elite": "Bauen Sie Ihren VPS aus und erweitern Sie die Speicherkapazität."
+  "vps_dashboard_tile_configuration_storage_add_upscale_elite": "Bauen Sie Ihren VPS aus und erweitern Sie die Speicherkapazität.",
+  "vps_dashboard_tile_configuration_upgrade_wrong_nic_cpu": "Für weitere vCores kontaktieren Sie bitte den Admin-NIC: {{ nichandle }}",
+  "vps_dashboard_tile_configuration_upgrade_wrong_nic_memory": "Für zusätzlichen RAM kontaktieren Sie bitte den Admin-NIC: {{ nichandle }}",
+  "vps_dashboard_tile_configuration_upgrade_wrong_nic_storage": "Für mehr Storage kontaktieren Sie bitte den NIC Admin: {{ nichandle }}"
 }
