--- a/packages/manager/modules/vps/src/dashboard/tile/configuration/translations/Messages_it_IT.json
+++ b/packages/manager/modules/vps/src/dashboard/tile/configuration/translations/Messages_it_IT.json
@@ -15,5 +15,8 @@
   "vps_dashboard_tile_configuration_upgrade_complete_reboot_required": "Le risorse sono state aggiunte correttamente sul VPS. Riavvia la macchina per attivare la nuova configurazione.",
   "vps_dashboard_tile_configuration_vcore": "vCore",
   "vps_dashboard_tile_configuration_memory_add_upscale_elite": "Fai evolvere il tuo VPS aumentando la memoria disponibile",
-  "vps_dashboard_tile_configuration_storage_add_upscale_elite": "Fai evolvere il tuo VPS aumentando lo storage disponibile"
+  "vps_dashboard_tile_configuration_storage_add_upscale_elite": "Fai evolvere il tuo VPS aumentando lo storage disponibile",
+  "vps_dashboard_tile_configuration_upgrade_wrong_nic_cpu": "Per usufruire di più vCore, contatta l’amministratore dell’account: {{ nichandle }}",
+  "vps_dashboard_tile_configuration_upgrade_wrong_nic_memory": "Per usufruire di più memoria, contatta l’amministratore dell’account: {{ nichandle }}",
+  "vps_dashboard_tile_configuration_upgrade_wrong_nic_storage": "Per usufruire di più storage, contatta l’amministratore dell’account: {{ nichandle }}"
 }
