--- a/packages/manager/modules/vps/src/dashboard/tile/configuration/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/vps/src/dashboard/tile/configuration/translations/Messages_pt_PT.json
@@ -15,5 +15,8 @@
   "vps_dashboard_tile_configuration_upgrade_complete_reboot_required": "A adição de recursos no seu VPS foi realizada com êxito. Reinicie a sua máquina para ativar a sua nova configuração.",
   "vps_dashboard_tile_configuration_vcore": "vCores",
   "vps_dashboard_tile_configuration_memory_add_upscale_elite": "Faça evoluir o seu VPS aumentando a sua memória",
-  "vps_dashboard_tile_configuration_storage_add_upscale_elite": "Faça evoluir o seu VPS aumentando o seu armazenamento"
+  "vps_dashboard_tile_configuration_storage_add_upscale_elite": "Faça evoluir o seu VPS aumentando o seu armazenamento",
+  "vps_dashboard_tile_configuration_upgrade_wrong_nic_cpu": "Para mais vCores, contacte o NIC admin: {{ nichandle }}.",
+  "vps_dashboard_tile_configuration_upgrade_wrong_nic_memory": "Para mais memória, contacte o NIC admin: {{ nichandle }}.",
+  "vps_dashboard_tile_configuration_upgrade_wrong_nic_storage": "Para mais armazenamento, contacte o NIC admin: {{ nichandle }}."
 }
